the project without SM links and last service

--- a/index.html
+++ b/index.html
@@ -358,36 +358,44 @@
     <!-- Contact Section -->
     <section class="contact">
         <div class="container">
-            <h2 class="section-title">Get In Touch</h2>
+            <h2 class="section-title" style="color: var(--mohtawa-dark-purple); margin-bottom: 1rem;">Get In Touch</h2>
+            <p style="text-align: center; color: var(--muted-foreground); font-size: 1.125rem; margin-bottom: 3rem; max-width: 600px; margin-left: auto; margin-right: auto;">Ready to transform your digital presence? Contact us today and let's discuss how we can help your business thrive.</p>
             
             <div class="contact-grid">
-                <div class="contact-card">
-                    <svg class="contact-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"></path>
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path>
-                    </svg>
-                    <h3>Location</h3>
-                    <p>Building No. 3827, Al Saif Al Amadi Street, Riyadh, KSA</p>
+                <div class="contact-card-modern">
+                    <div class="contact-icon-wrapper location-icon">
+                        <svg class="contact-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"></path>
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path>
+                        </svg>
+                    </div>
+                    <h3 class="contact-card-title">Location</h3>
+                    <p class="contact-card-text">Building No. 3827<br>Al Saif Al Amadi Street<br>Riyadh, KSA</p>
                 </div>
-                <div class="contact-card">
-                    <svg class="contact-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"></path>
-                    </svg>
-                    <h3>Phone</h3>
-                    <p>+966 594420917</p>
+                <div class="contact-card-modern">
+                    <div class="contact-icon-wrapper phone-icon">
+                        <svg class="contact-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"></path>
+                        </svg>
+                    </div>
+                    <h3 class="contact-card-title">Phone</h3>
+                    <p class="contact-card-subtext">Call us to discuss your project</p>
+                    <a href="whatsapp://send?phone=966594420917" class="contact-card-btn phone-btn">+966 594420917</a>
                 </div>
-                <div class="contact-card">
-                    <svg class="contact-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
-                    </svg>
-                    <h3>Email</h3>
-                    <p>info@mohtawa.sa</p>
+                <div class="contact-card-modern">
+                    <div class="contact-icon-wrapper email-icon">
+                        <svg class="contact-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
+                        </svg>
+                    </div>
+                    <h3 class="contact-card-title">Email</h3>
+                    <p class="contact-card-subtext">Drop us an email anytime</p>
+                    <a href="mailto:info@mohtawa.sa" class="contact-card-btn email-btn">info@mohtawa.sa</a>
                 </div>
             </div>
 
             <div class="contact-cta">
-                <p>Ready to transform your digital presence?</p>
-                <a href="pages/contact.html" class="btn btn-primary">Start Your Project Today →</a>
+                <a href="pages/contact.html" class="btn btn-primary">Get More Information →</a>
             </div>
         </div>
     </section>
