--- a/pages/clients.html
+++ b/pages/clients.html
@@ -53,6 +53,17 @@
 
   </div>
 </section>
+
+    <!-- CTA Section -->
+    <section style="padding: 5rem 0; background: linear-gradient(to right, rgba(107, 76, 154, 0.05), rgba(0, 217, 255, 0.05));">
+        <div class="container" style="text-align: center;">
+            <h2 style="color: var(--mohtawa-dark-purple); margin-bottom: 1rem;">Ready to Start Your Project?</h2>
+            <p style="color: var(--muted-foreground); margin-bottom: 2rem; font-size: 1.125rem;">Let's discuss how we can help achieve your business goals and transform your digital presence.</p>
+            <a href="contact.html" class="btn btn-primary">Get Started Today →</a>
+        </div>
+    </section>
+    
+
     <!-- Footer -->
     <footer>
         <div class="container">
