--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -47,6 +47,74 @@
 
 
 
+    <!-- Portfolio Our Featured Projects -->
+<section class="our-featured-projects">
+  <div class="our-featured-projects-container">
+    <!-- Left Text Column -->
+    <div class="our-featured-projects-text">
+      <h2>Our Featured Projects</h2>
+      <p>
+        From concept to execution, these projects showcase our ability to transform ideas into visually stunning narratives.
+        Trusted by global brands, our work blends innovation with precision to leave lasting impressions.
+      </p>
+    </div>
+
+    <!-- Right Visual Column -->
+    <div class="our-featured-projects-visuals">
+      <!-- Top Row: Large Image + Links -->
+      <div class="project-top">
+        <div class="project-image">
+          <img src="../images/portfolio/desktop.jpeg" alt="Project Preview">
+        </div>
+        <div class="project-links">
+          <div class="link-group">
+            <h3>AI & Deepfake Innovation</h3>
+            <p><span>➔</span> <a href="https://bit.ly/4hcH0sx" target="_blank">https://bit.ly/4hcH0sx</a></p>
+          </div>
+          <div class="link-group">
+            <h3>Iman Gadzhi-Style</h3>
+            <p><span>➔</span> <a href="https://bit.ly/41gCDXu" target="_blank">https://bit.ly/41gCDXu</a></p>
+          </div>
+          <div class="link-group">
+            <h3>Big-Brand Post-Production</h3>
+            <p><span>➔</span> <a href="https://bit.ly/4ikeuq0" target="_blank">https://bit.ly/4ikeuq0</a></p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Bottom Thumbnails -->
+      <div class="project-thumbnails">
+        <img src="../images/portfolio/thumb1.jpeg" alt="Thumbnail 1">
+        <img src="../images/portfolio/thumb2.jpeg" alt="Thumbnail 2">
+        <img src="../images/portfolio/thumb3.jpeg" alt="Thumbnail 3">
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="social-media-works">
+  <h2 class="social-media-works section-title">Social Media Sample Works</h2>
+
+  <div class="social-media-grid">
+    <!-- FMTech -->
+    <div class="social-media-item">
+      <h3>Fmtech</h3>
+      <img src="../images/portfolio/Fmtech-social.png" alt="Fmtech Social Media">
+    </div>
+
+    <!-- WRTS -->
+    <div class="social-media-item">
+      <h3>WRTS - KSA</h3>
+      <img src="../images/portfolio/WRTS-KSA-social.png" alt="WRTS Social Media">
+    </div>
+
+    <!-- Tayf Aziz Center -->
+    <div class="social-media-item">
+      <h3>Tayf Aziz Center</h3>
+      <img src="../images/portfolio/tayf-social.png" alt="Tayf Aziz Social Media">
+    </div>
+  </div>
+</section>
 
 
     <!-- Creative Portfolio Section -->
@@ -103,7 +171,7 @@
     <!-- Featured Projects -->
 <section class="project-section">
 
-
+    <h2 class="social-media-works section-title">Our Projects</h2>
             <!-- Featured Projects -->
   <div class="project-content" alt="FMTECH">
     <!-- Left Text Content -->
@@ -221,76 +289,6 @@
 </section>
 
 
-
-
-
-    <!-- Portfolio Projects -->
-    <section class="portfolio" style="padding: 3rem 0;">
-        <div class="container">
-            <div class="portfolio-grid">
-                <div class="portfolio-card">
-                    <h3>FMTECH</h3>
-                    <div class="website">www.fmtech.sa</div>
-                    <p><strong>Project Type:</strong> Website Development & System Integration</p>
-                    <p>Built FMTECH's professional website with an intelligent service booking system and real-time maintenance tracking portal. The platform streamlines their facility management operations, improves client communication, and provides comprehensive analytics for business insights.</p>
-                    <div style="margin-top: 1rem; padding-top: 1rem; border-top: 1px solid var(--border);">
-                        <strong style="color: var(--mohtawa-purple);">Results:</strong>
-                        <p style="margin-top: 0.5rem;">Increased online inquiries by 45%, reduced booking time by 60%, improved customer satisfaction scores.</p>
-                    </div>
-                </div>
-                <div class="portfolio-card">
-                    <h3>Adsmart Services</h3>
-                    <div class="website">adsmart-services.com</div>
-                    <p><strong>Project Type:</strong> Portfolio Website & Lead Generation</p>
-                    <p>Designed a dynamic portfolio website for Adsmart Services that showcases their marketing expertise, complete with case studies and a lead-capture system. The site effectively communicates their value proposition and has boosted client inquiries significantly.</p>
-                    <div style="margin-top: 1rem; padding-top: 1rem; border-top: 1px solid var(--border);">
-                        <strong style="color: var(--mohtawa-purple);">Results:</strong>
-                        <p style="margin-top: 0.5rem;">60% increase in client inquiries, 35% conversion rate improvement, expanded client base.</p>
-                    </div>
-                </div>
-                <div class="portfolio-card">
-                    <h3>Crucial Crew</h3>
-                    <div class="website">www.crucialcrew.com</div>
-                    <p><strong>Project Type:</strong> Fitness Website & Membership Management</p>
-                    <p>Crafted Crucial Crew's high-energy fitness website with class booking integration and membership management system. The platform enables seamless member experience and simplifies administrative operations for the fitness center.</p>
-                    <div style="margin-top: 1rem; padding-top: 1rem; border-top: 1px solid var(--border);">
-                        <strong style="color: var(--mohtawa-purple);">Results:</strong>
-                        <p style="margin-top: 0.5rem;">40% increase in sign-ups, 50% reduction in booking inquiries, improved member retention.</p>
-                    </div>
-                </div>
-                <div class="portfolio-card">
-                    <h3>Tayf Aziz</h3>
-                    <div class="website">www.tayfaziz.com</div>
-                    <p><strong>Project Type:</strong> Healthcare Website & Appointment System</p>
-                    <p>Created a warm, welcoming website for Tayf Aziz Center with an intuitive appointment scheduling system. The platform helps parents easily book pediatric rehabilitation services and provides valuable health information.</p>
-                    <div style="margin-top: 1rem; padding-top: 1rem; border-top: 1px solid var(--border);">
-                        <strong style="color: var(--mohtawa-purple);">Results:</strong>
-                        <p style="margin-top: 0.5rem;">Increased appointment bookings by 55%, improved patient communication, enhanced online presence.</p>
-                    </div>
-                </div>
-                <div class="portfolio-card">
-                    <h3>SZ International Trading</h3>
-                    <div class="website">www.szinternationaltrading.com</div>
-                    <p><strong>Project Type:</strong> E-Commerce & B2B Platform</p>
-                    <p>Developed SZ International Trading's automotive showcase platform with advanced vehicle filtering and inquiry features. The platform connects international buyers with quality automotive products and services.</p>
-                    <div style="margin-top: 1rem; padding-top: 1rem; border-top: 1px solid var(--border);">
-                        <strong style="color: var(--mohtawa-purple);">Results:</strong>
-                        <p style="margin-top: 0.5rem;">Expanded international buyer connections, 70% increase in inquiries, improved sales pipeline.</p>
-                    </div>
-                </div>
-                <div class="portfolio-card">
-                    <h3>Hungry Dispo</h3>
-                    <div class="website">www.hungrydispo.com</div>
-                    <p><strong>Project Type:</strong> Real Estate Platform & Lead Generation</p>
-                    <p>Designed Hungry Dispo's modern real estate platform with advanced property search and instant inquiry features. The platform streamlines property discovery and connects buyers with sellers efficiently.</p>
-                    <div style="margin-top: 1rem; padding-top: 1rem; border-top: 1px solid var(--border);">
-                        <strong style="color: var(--mohtawa-purple);">Results:</strong>
-                        <p style="margin-top: 0.5rem;">Doubled lead generation, 45% increase in property inquiries, improved conversion rates.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
 
 
