--- a/pages/services.html
+++ b/pages/services.html
@@ -45,6 +45,36 @@
         </div>
     </section>
 
+<section class="unique-selling">
+  <div class="unique-selling-container">
+    <!-- Left USP Box -->
+    <div class="usp-box">
+      <h2>Unique Selling<br>Proposition</h2>
+      <p>
+        Specialized in niche markets (e.g., Facility management, real estate, tech startups, healthcare & education).
+      </p>
+    </div>
+
+    <!-- Top Image Grid -->
+    <div class="usp-images">
+      <img src="../images/usp1.jpeg" alt="Meeting">
+      <img src="../images/usp2.jpeg" alt="City View">
+      <img src="../images/usp3.jpeg" alt="Digital Marketing">
+    </div>
+
+    <!-- Bottom Quote -->
+    <div class="usp-quote">
+      <div class="quote-icon">❝</div>
+      <p>
+        We turn visions into success stories, blending creativity, technology, and data-driven strategies to deliver measurable results.
+        At <strong>Mohtawa</strong>, we don't just market your brand, we connect it with the right audience in impactful and meaningful ways.
+      </p>
+    </div>
+  </div>
+</section>
+
+
+
     <!-- Services Grid -->
     <section class="services" style="padding: 3rem 0;">
         <div class="container">
