--- a/pages/contact.html
+++ b/pages/contact.html
@@ -288,6 +288,18 @@
                     <p style="color: #666; margin: 0 0 1.5rem;">Connect with us on LinkedIn for industry insights</p>
                     <span style="display: inline-block; color: var(--mohtawa-purple); font-weight: 600; transition: all 0.3s ease;">Follow Us →</span>
                 </a>
+
+                <!-- Instagram Card -->
+                <a href="https://instagram.com/mohtawa" target="_blank" class="social-media-card instagram-card">
+                    <div class="social-media-icon-wrapper instagram-bg">
+                        <svg viewBox="0 0 24 24" fill="white" width="50" height="50">
+                            <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zM5.838 12a6.162 6.162 0 1 1 12.324 0 6.162 6.162 0 0 1-12.324 0zM12 16a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm4.965-10.322a1.44 1.44 0 1 1 2.881.001 1.44 1.44 0 0 1-2.881-.001z"/>
+                        </svg>
+                    </div>
+                    <h3 style="color: var(--mohtawa-dark-purple); font-size: 1.5rem; margin: 1.5rem 0 0.5rem; font-weight: 600;">Instagram</h3>
+                    <p style="color: #666; margin: 0 0 1.5rem;">Follow us on Instagram for visual stories and behind-the-scenes</p>
+                    <span style="display: inline-block; color: var(--mohtawa-purple); font-weight: 600; transition: all 0.3s ease;">Follow Us →</span>
+                </a>
             </div>
         </div>
 
@@ -326,6 +338,10 @@
             background: #0A66C2;
         }
 
+        .social-media-card.instagram-card::before {
+            background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+        }
+
         .social-media-card:hover {
             transform: translateY(-12px);
             box-shadow: 0 16px 48px rgba(107, 76, 154, 0.15);
@@ -360,6 +376,10 @@
 
         .social-media-icon-wrapper.linkedin-bg {
             background: linear-gradient(135deg, #0A66C2 0%, #004182 100%);
+        }
+
+        .social-media-icon-wrapper.instagram-bg {
+            background: linear-gradient(135deg, #f09433 0%, #dc2743 100%);
         }
 
         .social-media-card:hover .social-media-icon-wrapper {
@@ -428,6 +448,11 @@
                         <a href="https://linkedin.com/company/mohtawa" target="_blank" aria-label="LinkedIn" class="social-link linkedin">
                             <svg viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.225 0z"/>
+                            </svg>
+                        </a>
+                        <a href="https://instagram.com/mohtawa" target="_blank" aria-label="Instagram" class="social-link instagram">
+                            <svg viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zM5.838 12a6.162 6.162 0 1 1 12.324 0 6.162 6.162 0 0 1-12.324 0zM12 16a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm4.965-10.322a1.44 1.44 0 1 1 2.881.001 1.44 1.44 0 0 1-2.881-.001z"/>
                             </svg>
                         </a>
                     </div>
