heading space remove

--- a/pages/services.html
+++ b/pages/services.html
@@ -49,7 +49,7 @@
   <div class="unique-selling-container">
     <!-- Left USP Box -->
     <div class="usp-box">
-      <h2>Unique Selling<br>Proposition</h2>
+      <h2>Unique Selling Proposition</h2>
       <p>
         Specialized in niche markets (e.g., Facility management, real estate, tech startups, healthcare & education).
       </p>
