--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="pages/services.html">Services</a></li>
                     <li><a href="pages/team.html">Team</a></li>
-                    <li><a href="pages/portfolio.html">Portfolio</a></li>
+                    <!--<li><a href="pages/portfolio.html">Portfolio</a></li>-->
                     <li><a href="pages/clients.html">Clients</a></li>
                     <li><a href="pages/contact.html">Contact</a></li>
                 </ul>
@@ -289,7 +289,7 @@
   </div>
 </section>
 
-    <!-- Portfolio Preview Section -->
+    <!-- Portfolio Preview Section
     <section class="portfolio">
         <div class="container">
             <h2 class="section-title">OUR PORTFOLIO</h2>
@@ -322,9 +322,9 @@
                 <a href="pages/portfolio.html" class="btn btn-primary">View All Projects →</a>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <!-- Testimonials Section -->
+    <!-- Testimonials Section 
     <section class="testimonials">
         <div class="container">
             <h2 class="section-title">Client Testimonials</h2>
@@ -353,7 +353,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <!-- Contact Section -->
     <section class="contact">
@@ -419,14 +419,14 @@
                         <li><a href="pages/clients.html">Clients</a></li>
                     </ul>
                 </div>
-                <div class="footer-section">
+                <!--<div class="footer-section">
                     <h4>Services</h4>
                     <ul>
                         <li><a href="pages/services.html">Web Development</a></li>
                         <li><a href="pages/services.html">Digital Marketing</a></li>
                         <li><a href="pages/services.html">App Development</a></li>
                     </ul>
-                </div>
+                </div>-->
                 <div class="footer-section">
                     <h4>Contact</h4>
                     <p>+966 594420917</p>
