--- a/pages/clients.html
+++ b/pages/clients.html
@@ -26,7 +26,7 @@
                                         <li><a href="../index.html#about">About</a></li>
                                         <li><a href="services.html">Services</a></li>
                                         <li><a href="team.html">Team</a></li>
-                                        <li><a href="portfolio.html">Portfolio</a></li>
+                                        <!--<li><a href="portfolio.html">Portfolio</a></li>--> 
                                         <li><a href="clients.html">Clients</a></li>
                                         <li><a href="contact.html">Contact</a></li>
                                 </ul>
@@ -83,14 +83,14 @@
                         <li><a href="clients.html">Clients</a></li>
                     </ul>
                 </div>
-                <div class="footer-section">
+                <!--<div class="footer-section">
                     <h4>Services</h4>
                     <ul>
                         <li><a href="services.html">Web Development</a></li>
                         <li><a href="services.html">Digital Marketing</a></li>
                         <li><a href="services.html">App Development</a></li>
                     </ul>
-                </div>
+                </div>-->
                 <div class="footer-section">
                     <h4>Contact</h4>
                     <p>+966 594420917</p>
