remove the circles and vision images

--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
       <p>To become KSA’s most trusted digital marketing partner, helping businesses thrive in the digital age.</p>
     </div>
 
-    <!-- Vision Image Circle -->
+    <!-- Vision Image Circle 
     <div class="mv-image-circle">
       <img src="images/vision.jpeg" alt="Vision Image">
-    </div>
+    </div>-->
 
     <!-- Mission Center -->
     <div class="mv-image-circle center-circle">
@@ -139,10 +139,10 @@
       </div>
     </div>
 
-    <!-- Goal Image Circle -->
+    <!-- Goal Image Circle 
     <div class="mv-image-circle">
       <img src="images/goal.jpeg" alt="Goal Image">
-    </div>
+    </div>-->
 
     <!-- Goal -->
     <div class="mv-item">
