--- a/pages/team.html
+++ b/pages/team.html
@@ -107,28 +107,78 @@
             
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem;">
                 <div style="padding: 2rem; background: linear-gradient(135deg, var(--mohtawa-light), white); border: 1px solid var(--border); border-radius: var(--radius-xl);">
-                    <h3 style="color: var(--mohtawa-dark-purple); margin-bottom: 1rem;">Innovation</h3>
-                    <p style="color: var(--muted-foreground); margin-bottom: 0;">We constantly push creative boundaries and embrace new technologies to deliver cutting-edge solutions.</p>
+                    <div style="display:flex; gap:1rem; align-items:flex-start;">
+                        <svg viewBox="0 0 24 24" width="40" height="40" style="color:var(--mohtawa-dark-purple); flex-shrink:0;" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+                            <path d="M9 18h6" />
+                            <path d="M10 22h4" />
+                            <path d="M12 2a6 6 0 0 0-4 10c0 2 1 3 1 3h6s1-1 1-3a6 6 0 0 0-4-10z" />
+                        </svg>
+                        <div>
+                            <h3 style="color: var(--mohtawa-dark-purple); margin-bottom: 1rem;">Innovation</h3>
+                            <p style="color: var(--muted-foreground); margin-bottom: 0;">We constantly push creative boundaries and embrace new technologies to deliver cutting-edge solutions.</p>
+                        </div>
+                    </div>
                 </div>
                 <div style="padding: 2rem; background: linear-gradient(135deg, var(--mohtawa-light), white); border: 1px solid var(--border); border-radius: var(--radius-xl);">
-                    <h3 style="color: var(--mohtawa-dark-purple); margin-bottom: 1rem;">Collaboration</h3>
-                    <p style="color: var(--muted-foreground); margin-bottom: 0;">We work together as a team and with our clients to achieve shared goals and exceptional results.</p>
+                    <div style="display:flex; gap:1rem; align-items:flex-start;">
+                        <svg viewBox="0 0 24 24" width="40" height="40" style="color:var(--mohtawa-dark-purple); flex-shrink:0;" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+                            <path d="M16 11c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3" />
+                            <path d="M8 13c-1.657 0-3 1.343-3 3s1.343 3 3 3 3-1.343 3-3" />
+                            <path d="M8 14l8-4" />
+                            <path d="M8 10l8 4" />
+                        </svg>
+                        <div>
+                            <h3 style="color: var(--mohtawa-dark-purple); margin-bottom: 1rem;">Collaboration</h3>
+                            <p style="color: var(--muted-foreground); margin-bottom: 0;">We work together as a team and with our clients to achieve shared goals and exceptional results.</p>
+                        </div>
+                    </div>
                 </div>
                 <div style="padding: 2rem; background: linear-gradient(135deg, var(--mohtawa-light), white); border: 1px solid var(--border); border-radius: var(--radius-xl);">
-                    <h3 style="color: var(--mohtawa-dark-purple); margin-bottom: 1rem;">Excellence</h3>
-                    <p style="color: var(--muted-foreground); margin-bottom: 0;">We maintain the highest standards in everything we do, from strategy to execution to delivery.</p>
+                    <div style="display:flex; gap:1rem; align-items:flex-start;">
+                        <svg viewBox="0 0 24 24" width="40" height="40" style="color:var(--mohtawa-dark-purple); flex-shrink:0;" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+                            <path d="M12 2l2 5h5l-4 3 2 5-5-3-5 3 2-5-4-3h5z" />
+                        </svg>
+                        <div>
+                            <h3 style="color: var(--mohtawa-dark-purple); margin-bottom: 1rem;">Excellence</h3>
+                            <p style="color: var(--muted-foreground); margin-bottom: 0;">We maintain the highest standards in everything we do, from strategy to execution to delivery.</p>
+                        </div>
+                    </div>
                 </div>
                 <div style="padding: 2rem; background: linear-gradient(135deg, var(--mohtawa-light), white); border: 1px solid var(--border); border-radius: var(--radius-xl);">
-                    <h3 style="color: var(--mohtawa-dark-purple); margin-bottom: 1rem;">Integrity</h3>
-                    <p style="color: var(--muted-foreground); margin-bottom: 0;">We build trust through transparency, honesty, and ethical business practices in all our relationships.</p>
+                    <div style="display:flex; gap:1rem; align-items:flex-start;">
+                        <svg viewBox="0 0 24 24" width="40" height="40" style="color:var(--mohtawa-dark-purple); flex-shrink:0;" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+                            <path d="M12 2v7" />
+                            <path d="M5 11l7 7 7-7" />
+                        </svg>
+                        <div>
+                            <h3 style="color: var(--mohtawa-dark-purple); margin-bottom: 1rem;">Integrity</h3>
+                            <p style="color: var(--muted-foreground); margin-bottom: 0;">We build trust through transparency, honesty, and ethical business practices in all our relationships.</p>
+                        </div>
+                    </div>
                 </div>
                 <div style="padding: 2rem; background: linear-gradient(135deg, var(--mohtawa-light), white); border: 1px solid var(--border); border-radius: var(--radius-xl);">
-                    <h3 style="color: var(--mohtawa-dark-purple); margin-bottom: 1rem;">Results-Driven</h3>
-                    <p style="color: var(--muted-foreground); margin-bottom: 0;">We focus on measurable outcomes and continuous optimization to maximize client success.</p>
+                    <div style="display:flex; gap:1rem; align-items:flex-start;">
+                        <svg viewBox="0 0 24 24" width="40" height="40" style="color:var(--mohtawa-dark-purple); flex-shrink:0;" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+                            <circle cx="12" cy="12" r="10" />
+                            <path d="M12 8v4l2 2" />
+                        </svg>
+                        <div>
+                            <h3 style="color: var(--mohtawa-dark-purple); margin-bottom: 1rem;">Results-Driven</h3>
+                            <p style="color: var(--muted-foreground); margin-bottom: 0;">We focus on measurable outcomes and continuous optimization to maximize client success.</p>
+                        </div>
+                    </div>
                 </div>
                 <div style="padding: 2rem; background: linear-gradient(135deg, var(--mohtawa-light), white); border: 1px solid var(--border); border-radius: var(--radius-xl);">
-                    <h3 style="color: var(--mohtawa-dark-purple); margin-bottom: 1rem;">Growth Mindset</h3>
-                    <p style="color: var(--muted-foreground); margin-bottom: 0;">We embrace learning, adapt to change, and continuously improve our skills and services.</p>
+                    <div style="display:flex; gap:1rem; align-items:flex-start;">
+                        <svg viewBox="0 0 24 24" width="40" height="40" style="color:var(--mohtawa-dark-purple); flex-shrink:0;" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+                            <path d="M3 17l6-6 4 4 8-8" />
+                            <path d="M7 13v6h6" />
+                        </svg>
+                        <div>
+                            <h3 style="color: var(--mohtawa-dark-purple); margin-bottom: 1rem;">Growth Mindset</h3>
+                            <p style="color: var(--muted-foreground); margin-bottom: 0;">We embrace learning, adapt to change, and continuously improve our skills and services.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
