Change contact location

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                         </svg>
                     </div>
                     <h3 class="contact-card-title">Location</h3>
-                    <p class="contact-card-text">Building No. 3827<br>Al Saif Al Amadi Street<br>Riyadh, KSA</p>
+                    <p class="contact-card-text">Bawan Hoshan Complex 1st Floor, 7593 Al Ihsaa Street,<br>Riyadh 12813, KSA</p>
                 </div>
                 <div class="contact-card-modern">
                     <div class="contact-icon-wrapper phone-icon">
