--- a/pages/contact.html
+++ b/pages/contact.html
@@ -62,9 +62,7 @@
                     </div>
                     <h3 class="contact-card-title">Location</h3>
                     <p class="contact-card-text">
-                        Building No. 3827<br>
-                        Al Saif Al Amadi Street<br>
-                        Riyadh, KSA 12353
+                        Bawan Hoshan Complex 1st Floor, 7593 Al Ihsaa Street,<br>Riyadh 12813, KSA
                     </p>
                 </div>
                 
