--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="pages/services.html">Services</a></li>
-                    <li><a href="pages/team.html">Team</a></li>
-                    <!--<li><a href="pages/portfolio.html">Portfolio</a></li>-->
+                    <!--<li><a href="pages/team.html">Team</a></li>
+                    <li><a href="pages/portfolio.html">Portfolio</a></li>-->
                     <li><a href="pages/clients.html">Clients</a></li>
                     <li><a href="pages/contact.html">Contact</a></li>
                 </ul>
@@ -220,7 +220,7 @@
 
     <!-- Team Preview Section  -->
     <!--                       -->
-    <!-- ------------------------>
+    <!-- ----------------------
 <section class="team-section">
   <h2 class="section-title">THE TEAM</h2>
   <p class="section-subtitle">Meet the Creative Minds Behind Your Digital Success</p>
@@ -233,7 +233,7 @@
   </div>
 
   <div class="team-members">
-    <!-- Member 1 -->
+
     <div class="team-member">
       <div class="team-img">
         <img src="images/Basma-AlBahiti.jpeg" alt="Basma AlBahiti">
@@ -245,7 +245,7 @@
       </p>
     </div>
 
-    <!-- Member 2 -->
+ 
     <div class="team-member">
       <div class="team-img">
         <img src="images/Mohammed-AlBahiti.jpeg" alt="Mohammed AlBahiti">
@@ -257,7 +257,7 @@
       </p>
     </div>
 
-    <!-- Member 3 -->
+
     <div class="team-member">
       <div class="team-img">
         <img src="images/Basim-Alkuraya.jpeg" alt="Basim Alkuraya">
@@ -274,7 +274,9 @@
                 <a href="pages/team.html" class="btn btn-primary">View All Team Members →</a>
             </div>
   </div>
-</section>
+</section>-->
+
+
     <!-- Client Logos Section -->
 
 <section class="clients-section" style="text-align: center; background-color: white;">
