--- a/pages/clients.html
+++ b/pages/clients.html
@@ -25,8 +25,8 @@
                                         <li><a href="../index.html">Home</a></li>
                                         <li><a href="../index.html#about">About</a></li>
                                         <li><a href="services.html">Services</a></li>
-                                        <li><a href="team.html">Team</a></li>
-                                        <!--<li><a href="portfolio.html">Portfolio</a></li>--> 
+                                        <!--<li><a href="team.html">Team</a></li>
+                                        <li><a href="portfolio.html">Portfolio</a></li>--> 
                                         <li><a href="clients.html">Clients</a></li>
                                         <li><a href="contact.html">Contact</a></li>
                                 </ul>
