clients page update

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  
+
     <!-- Navigation -->
     <nav>
         <div class="container">
@@ -286,10 +286,17 @@
     <p class="section-subtitle">We are proud to have worked with leading brands and organizations in KSA and beyond.</p>
 
   <div class="clients-grid">
-    <img src="images/Clients/Picture1.png"  width="80%">
-                    <div style="text-align: center; margin-top: 3rem;">
-                <a href="pages/clients.html" class="btn btn-primary">View All Clients →</a>
+    <img src="images/Clients/page20_img1.png" alt="Client 11">
+    <img src="images/Clients/page20_img2.jpeg" alt="Client 12">
+    <img src="images/Clients/page20_img3.png" alt="Client 13">
+    <img src="images/Clients/page20_img4.png" alt="Client 14">
+                    
+  
+    
 
+  </div>
+  <div style="text-align: center; margin-top: 3rem;">
+    <a href="pages/clients.html" class="btn btn-primary">View All Clients →</a>
   </div>
 </section>
 
