--- a/pages/clients.html
+++ b/pages/clients.html
@@ -46,11 +46,24 @@
     </section>
     <!-- Client Logos Section -->
 
-<section class="clients-section" style="text-align: center; background-color: white;">
+<section class="clients-section" style="text-align: center; background-color: white; padding: 3rem 0;">
   <div class="clients-grid">
-    <img src="../images/Clients/Picture1.png"  width="80%">
-    <img src="../images/Clients/Picture1.png"  width="80%">
-
+    <img src="../images/Clients/page20_img1.png" alt="Client 11">
+    <img src="../images/Clients/page20_img2.jpeg" alt="Client 12">
+    <img src="../images/Clients/page20_img3.png" alt="Client 13">
+    <img src="../images/Clients/page20_img4.png" alt="Client 14">
+    <img src="../images/Clients/page20_img5.png" alt="Client 15">
+    <img src="../images/Clients/page20_img6.png" alt="Client 16">
+    <img src="../images/Clients/page20_img7.jpeg" alt="Client 17">
+    <img src="../images/Clients/page20_img8.png" alt="Client 18">
+    <img src="../images/Clients/page19_img1.png" alt="Client 1">
+    <img src="../images/Clients/page19_img3.png" alt="Client 3">
+    <img src="../images/Clients/page19_img5.png" alt="Client 5">
+    <img src="../images/Clients/page19_img6.png" alt="Client 6">
+    <img src="../images/Clients/page19_img8.png" alt="Client 8">
+    <img src="../images/Clients/page19_img9.jpeg" alt="Client 9">
+    <img src="../images/Clients/page19_img10.png" alt="Client 10">
+    <img src="../images/Clients/page20_img10.png" alt="Client 20">
   </div>
 </section>
 
